feat: Skills体系重构 v2.3.1
主要变更:
1. 移除与MVP内置功能重复的skills (17个)
   - capabilities/knowledge: skill-knowledge-base, skill-local-knowledge, skill-rag, skill-vector-sqlite
   - capabilities/llm: skill-llm-config-manager, skill-llm-context-builder, skill-llm-conversation
   - capabilities/security: skill-access-control, skill-audit, skill-security
   - capabilities/monitor: skill-agent
   - _system: skill-capability, skill-scene-management, skill-llm

2. 从skill-ui-test迁移业务场景skills (7个)
   - skill-recruitment-management: 招聘管理系统
   - skill-approval-form: 审批表单系统
   - skill-real-estate-form: 房产中介房源表单
   - skill-recording-qa: 录音质检系统
   - skill-knowledge-qa: 知识问答场景能力
   - skill-llm-config-manager: LLM配置管理
   - skill-llm-baidu: 百度千帆LLM Provider

3. 为所有skills添加标准llmConfig配置 (63个)
   - 5个Function Calling工具
   - 多Provider支持

4. skill-index模块化拆分
   - categories.yaml: 17个分类定义
   - scene-drivers.yaml: 6个场景驱动
   - skills/*.yaml: 按分类组织
   - scenes/*.yaml: 按分类组织

5. 版本统一为2.3.1

Skills库最终统计: 63个独立skills